# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//foundation/filemanagement/dfs_service/distributedfile.gni")

ohos_shared_library("libdistributedfileservice") {
  include_dirs = [
    "include/ipc",
    "include/device",
    "include/network",
    "//foundation/distributedhardware/devicemanager/interfaces/inner_kits/native_cpp/include",
  ]

  sources = [
    "src/device/device_manager_agent.cpp",
    "src/ipc/distributedfile_service.cpp",
    "src/ipc/distributedfile_service_stub.cpp",
    "src/network/softbus_agent.cpp",
    "src/network/softbus_dispatcher.cpp",
  ]

  configs = [ "${utils_path}:compiler_configs" ]

  external_deps = [
    "dsoftbus_standard:softbus_client",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  deps = [
    "${utils_path}:libdistributedfileutils",
    "../../interfaces/innerkits/native:libdistributedfile_innerkits",
    "//foundation/distributedhardware/devicemanager/interfaces/inner_kits/native_cpp:devicemanagersdk",
  ]

  part_name = "dfs_service"
  subsystem_name = "filemanagement"
}
