# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//foundation/filemanagement/dfs_service/distributedfile.gni")

group("dfs_service_fuzztest") {
  testonly = true

  deps = [
    "${distributedfile_path}/test/fuzztest/clouddaemonstub_fuzzer:CloudDaemonStubFuzzTest",
    "${distributedfile_path}/test/fuzztest/daemonstub_fuzzer:DaemonStubFuzzTest",
    "${distributedfile_path}/test/fuzztest/daemonstubhandleopenP2Pconnection_fuzzer:DaemonStubHandleOpenP2PConnectionFuzzTest",
    "${distributedfile_path}/test/fuzztest/daemonstubhandlecloseP2Pconnection_fuzzer:DaemonStubHandleCloseP2PConnectionFuzzTest",
    "${distributedfile_path}/test/fuzztest/daemonstubhandlepreparesession_fuzzer:DaemonStubHandlePrepareSessionFuzzTest",
    "${distributedfile_path}/test/fuzztest/daemonstubhandlerequestsendfile_fuzzer:DaemonStubHandleRequestSendFileFuzzTest",
    "${distributedfile_path}/test/fuzztest/daemonstubhandleopenP2PconnectionEx_fuzzer:DaemonStubHandleOpenP2PConnectionExFuzzTest",
    "${distributedfile_path}/test/fuzztest/daemonstubreadbatchuris_fuzzer:DaemonStubReadBatchUrisFuzzTest",
    "${distributedfile_path}/test/fuzztest/daemonstubwriteuribyrawdata_fuzzer:DaemonStubWriteUriByRawDataFuzzTest",
    "${distributedfile_path}/test/fuzztest/ffrttimer_fuzzer:FfrtTimerFuzzTest",
    "${distributedfile_path}/test/fuzztest/filetranslistenerstub_fuzzer:FileTransListenerStubFuzzTest",
    "${distributedfile_path}/test/fuzztest/handleinnercancelcopytask_fuzzer:HandleInnerCancelCopyTaskFuzzTest",
    "${distributedfile_path}/test/fuzztest/handlegetdfsurisdirfromlocal_fuzzer:HandleGetDfsUrisDirFromLocalFuzzTest",
    "${distributedfile_path}/test/fuzztest/ohclouddiskmanagerndk_fuzzer:OHCloudDiskManagerNDKFuzzTest",
    "${distributedfile_path}/test/fuzztest/readbatchuribyrawdata_fuzzer:ReadBatchUriByRawDataFuzzTest",
  ]
}
