# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/test.gni")
import("//foundation/filemanagement/dfs_service/distributedfile.gni")

group("cloudsyncunittests") {
  testonly = true
  deps = [
    "cloud_adapter:cloud_adapter_test",
    "cloud_daemon:cloud_daemon_test",
    "cloud_disk:cloud_disk_test",
    "clouddisk_database:clouddisk_database_test",
    "cloudsync_api:cloudsync_api_test",
    "cloudsync_sa:cloudsync_sa_test",
    "services_daemon:services_daemon_test",
    "utils:utils_test",
  ]
}

group("distributedfileunittests") {
  testonly = true
  deps = [ "distributed_file_daemon:distributed_daemon_test" ]
}
