# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//foundation/filemanagement/dfs_service/distributedfile.gni")

config("private_config") {
  include_dirs = [
    "../../../frameworks/native",
  ]

  configs = [ "//build/config/compiler:exceptions" ]
}

config("public_config") {
  include_dirs = [ "." ]
}

ohos_shared_library("libdistributedfile_innerkits") {
  sources = [
    "../../../frameworks/native/service_proxy.cpp"
  ]

  configs = [ ":private_config" ]

  public_configs = [ ":public_config" ]

  external_deps = [
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
  ]

  deps = [
      "${utils_path}:libdistributedfileutils",
  ]

  part_name = "filemanagement_dfs_service"
  subsystem_name = "filemanagement"
}