# Copyright (C) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/init/seccomp/scripts/seccomp_policy_fixer.gni")

ohos_prebuilt_seccomp("disk_monitor_seccomp_filter") {
  sources = [ "clouddiskservice.seccomp.policy" ]

  filtername = "clouddiskservice"

  process_type = "system"

  part_name = "dfs_service"
  subsystem_name = "filemanagement"

  install_enable = true
  install_images = [ "system" ]
}