# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")
import("//foundation/filemanagement/dfs_service/distributedfile.gni")
ohos_fuzztest("CloudSyncServiceStubFuzzTest") {
  module_out_path = "dfs_service/dfs_service"
  fuzz_config_file =
      "${distributedfile_path}/test/fuzztest/cloudsyncservicestub_fuzzer"
  include_dirs = [
    "${distributedfile_path}/test/fuzztest/fuzz_common",
    "${innerkits_native_path}/cloudsync_kit_inner",
    "${media_library_path}/interfaces/inner_api/media_library_helper/include",
    "${services_path}/cloudsyncservice/include",
    "${services_path}/cloudsyncservice/include/cycle_task",
    "${services_path}/cloudsyncservice/include/cycle_task/tasks",
    "${services_path}/cloudsyncservice/include/data_sync",
    "${services_path}/cloudsyncservice/include/data_sync/cloud_disk_data_sync",
    "${services_path}/cloudsyncservice/include/data_sync/gallery_data_sync",
    "${services_path}/cloudsyncservice/include/ipc",
    "${services_path}/cloudsyncservice/include/sync_rule",
    "${services_path}/cloudsyncservice/include/transport",
    "${services_path}/cloudsyncservice/include/transport/softbus",
    "${utils_path}/dentry/include",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
    "-flto",
    "-fvisibility=hidden",
    "-Dprivate=public",
    "--coverage",
  ]
  ldflags = [
    "-flto",
    "--coverage",
  ]
  sources = [
    "${distributedfile_path}/services/cloudsyncservice/src/ipc/cloud_sync_service_stub.cpp",
    "${distributedfile_path}/test/fuzztest/cloudsyncservicestub_fuzzer/cloudsyncservicestub_fuzzer.cpp",
  ]

  deps = [
    "${innerkits_native_path}/cloud_file_kit_inner:cloudfile_kit",
    "${services_path}/cloudsyncservice:cloudsync_sa_static",
    "${utils_path}:libdistributedfileutils_lite",
  ]

  external_deps = [
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken_shared",
    "access_token:libtokensetproc_shared",
    "c_utils:utils",
    "device_manager:devicemanagersdk",
    "ffrt:libffrt",
    "hilog:libhilog",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}

group("fuzztest") {
  testonly = true
  deps = []
}
